--- a/action.yml
+++ b/action.yml
@@ -7,7 +7,7 @@ input :
     default : "1"
 outputs :
   num_squared : 
-  value : ${{ steps.get-square.outputs.num_squared }}
+  value : '${{ steps.get-square.outputs.num_squared }}'
 runs : 
   using : 'composite'
   steps : 
